# Agent-365-Readiness-Checker

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  checker.py  pyproject.toml  requirements.txt  security_checks.py
.github/workflows/: ci.yml
tests/: conftest.py  test_checker.py  test_security_checks.py
