[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent365-preflight"
version = "1.2.0"
description = "Pre-flight readiness and security/governance checks for Microsoft Agent 365 onboarding."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Chris Williams" }]
keywords = ["agent365", "entra", "azure", "graph", "security", "preflight"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "msal>=1.31.0",
    "requests>=2.32.3",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "responses>=0.25",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/chriswillia/Agent-365-Readiness-Checker"
Repository = "https://github.com/chriswillia/Agent-365-Readiness-Checker"

[project.scripts]
agent365-preflight = "checker:main"

[tool.setuptools]
py-modules = ["checker", "security_checks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
